--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h1><a href="index.html">Abeer Mathur</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2> I am a student studying <span>Data Science</span>.</h2>
+      <h2>  <span>Data Science</span> student at PSU</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -59,10 +59,10 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="www.linkedin.com/in/abeer-mathur" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="http://github.com/Abeermathur7" class="github"><i class="bi bi-github"></i></a>
+        <!-- <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a> -->
+        <a href="http://www.linkedin.com/in/abeer-mathur" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -86,7 +86,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Data Scientist</h3>
           <p class="fst-italic">
-            Hey, I am Abeer, and I am a Computational Data Science student at the Pennsylvania State University!
+            Hey, I am Abeer, and I am a Computational Data Science student at the Pennsylvania State University.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -105,8 +105,8 @@
             </div>
           </div>
           <p>
-            Hey! I am Abeer (pronounced "A-beer") and I am a Junior majoring in Computational Data Science at The Pennsylvania State University.I took an "Intro to Java" class in high school to try out this "coding" thing and I have been hooked ever since. 
-            The pivot to data science came when I got to college and read a book called "Freakanomics" by Steven Levitt. It opened my eyes to how data can reveal stories, patters and insights about the world that we would have never thought of.
+            Hey! I am Abeer (pronounced "A-beer") and I am a Junior majoring in Computational Data Science at The Pennsylvania State University.In high school I decided to try out this "coding" thing and took an "Intro to Java" class; I have been hooked ever since. 
+            The pivot to data science came when I got to college and read a book called "Freakanomics" by Steven Levitt. It opened my eyes to how data can reveal stories, patters and insights about the world we assume we know a lot about.
             In my free time I like to go hiking, skiing and bowling. When I am at home, there is nothing better than a hot cup of coffee and a good book! (Malcom Gladwell is my personal favorite). Welcome, relax, feel free to take a look around!
           </p>
         </div>
