--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>267-300-5345</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Pennsylvania, USA</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>abeermathur7@gmail.com</span></li>
               </ul>
@@ -407,7 +407,7 @@
             <p>
             <ul>
               <li>Location: State College, PA</li>
-              <li>Phone: 267-300-5345</li>
+              <li>Phone: </li>
               <li>email: abeermathur7@gmail.com</li>
             </ul>
             </p>
@@ -782,7 +782,7 @@
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <p>267-300-5345</p>
+            <p></p>
           </div>
         </div>
       </div>
