--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -46,7 +46,7 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">This is an example of portfolio detail</h2>
+            <h2 class="portfolio-title">Projects</h2>
 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
@@ -72,14 +72,17 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
-              <li><strong>Client</strong>: ASU Company</li>
-              <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+              <li><strong>Category</strong>: Object Oriented Programming/AI</li>
+              <li><strong>Client</strong>: Personal Project</li>
+              <li><strong>Project date</strong>: July 2020</li>
+              <li><strong>Project URL</strong>: <a href="https://github.com/Abeermathur7/AITicTacToe"> My Github </a></li>
             </ul>
 
             <p>
-              Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+              I broke this project down into 3 deliverables: GUI, 2 Player functionality, MiniMax integration.
+              I began by making a fundamental baseline with basic "if this then" structure. Then I utilized the JOptionPane library to integrate a basic clickable GUI. Then finally, I researched and implemented the MiniMax. The MiniMax algorithm works by assigning a point value to each scenario (-1: loss, 0: lie, 2: win).
+              Essentially it "plays through" the game after ever move the player makes and picks its move based on whatever would maximize the point value. 
+
             </p>
           </div>
 
@@ -90,13 +93,7 @@
 
   </main><!-- End #main -->
 
-  <div class="credits">
-    <!-- All the links in the footer should remain intact. -->
-    <!-- You can delete the links only if you purchased the pro version. -->
-    <!-- Licensing information: https://bootstrapmade.com/license/ -->
-    <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-  </div>
+
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
