--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span></span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Resume pdf:</strong><a href="assets\scss\Abeer Mathur Internship Resume 2023.pdf">My Resume</a> <span></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Pennsylvania, USA</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>abeermathur7@gmail.com</span></li>
               </ul>
@@ -407,7 +407,7 @@
             <p>
             <ul>
               <li>Location: State College, PA</li>
-              <li>Phone: </li>
+              <li>PSU-Email: aqm6537@psu.edu</li>
               <li>email: abeermathur7@gmail.com</li>
             </ul>
             </p>
@@ -615,7 +615,7 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 1</h4>
+              <h4>AI Tic Tac Toe Java</h4>
               <p>App</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
