--- a/index.html
+++ b/index.html
@@ -756,8 +756,8 @@
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-map"></i>
-            <h3>My Address</h3>
-            <p>A108 Adam Street, New York, NY 535022</p>
+            <h3>My Location</h3>
+            <p>State College, PA, USA</p>
           </div>
         </div>
 
