--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -55,13 +55,13 @@
                   <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                   <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
-                </div>
+                </div> -->
 
               </div>
               <div class="swiper-pagination"></div>
@@ -75,7 +75,7 @@
               <li><strong>Category</strong>: Object Oriented Programming/AI</li>
               <li><strong>Client</strong>: Personal Project</li>
               <li><strong>Project date</strong>: July 2020</li>
-              <li><strong>Project URL</strong>: <a href="https://github.com/Abeermathur7/AITicTacToe"> My Github </a></li>
+              <li><strong>Project URL</strong>: <a href= "javascript:window.open('https://github.com/Abeermathur7/AITicTacToe', '_blank')" > Project Repo </a></li>
             </ul>
 
             <p>
