updated resume part

--- a/index.html
+++ b/index.html
@@ -462,6 +462,15 @@
               <li>Lead club activities organized club social events, spoke to sponsors and companies to organize talks, trips and activities for club members.</li>
             </p>
           </div>
+          <div class="resume-item">
+            <h4>Abba Java Coffee House</h4>
+            <p><em>Barista</em></p>
+            <h5>February 2023-Present</h5>
+            <p>
+            <ul>
+              <li>Help serve free coffee and meals to students and those in need in the State College community.</li>
+            </p>
+          </div>
           <h3 class="resume-title">Skills</h3>
           <div class="resume-item pb-0">
             <h4>Technical</h4>
@@ -487,13 +496,26 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Experience</h3>
           <div class="resume-item">
-            <h4>Assistant Data Scientist</h4>
-            <h5>Oct 2021 – May 2022</h5>
-            <p><em>Dr Brick’s Project Penn State Department of Health and Human Development Volunteer</em></p>
+            <h4>Data Scientist</h4>
+            <h5>Jan- 2023 – June 2023</h5>
+            <p><em>(Autonomous Vehicles Project) Penn State Advanced Vehicles Team</em></p>
             <p><em>State College,PA </em></p>
             <p>
             <ul>
-              <li>Utilized database management skills to extract and clean data regarding recovering addicts from an online database using SQL and R</li>
+              <li>Collaborated with a small sub-team to help build a level 4 autonomous vehicle in a project partnered with General Motors.</li>
+              <li>Collected (Cepton) LiDAR and (Delphi) Radar outputs by publishing the raw data to a ROS topic.</li>
+              <li>Streamlined the Radar data collection process through a Python script that provided usable 3D coordinate data.</li>
+              <li>Utilized the data to train a “YOLO” machine learning model to detect pedestrians and objects from up to 175m.</li>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>Assistant Data Scientist</h4>
+            <h5>Oct 2021 – May 2022</h5>
+            <p><em>(Addiction Dashboard project) Penn State Department of Health and Human Development Volunteer</em></p>
+            <p><em>State College,PA </em></p>
+            <p>
+            <ul>
+              <li>Utilized SQL and R skills to extract and clean geolocation data pertaining to recovering addicts.</li>
               <li>Examined the dataset and built functioning data visualizations like charts and digital line graphs using Tableau</li>
               <li>Analyzed the dataset and communicated key findings in a formal presentation to my team so they can better understand the dataset</li>
             </p>
