--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 
       <div class="section-title">
         <h2>Resume</h2>
-        <p>Check Out My Resume</p>
+        <p>Check Out <a href="assets\scss\Abeer Mathur Resume 2024.pdf">My Resume</a></p>
       </div>
 
       <div class="row">
@@ -496,10 +496,23 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Experience</h3>
           <div class="resume-item">
+            <h4>Data Science Intern</h4>
+            <h5>June- 2023 – Aug 2023</h5>
+            <p><em>Constellation Energy</em></p>
+            <p><em>State College,PA </em></p>
+            <p>
+            <ul>
+              <li>Redesigned and optimized an Oracle SQL database for a customer-centric application serving 200,000 users, resulting in a
+                remarkable 44% reduction in database size.</li>
+              <li>Analyzed inefficiencies in performance and runtime for API endpoints by writing KQL queries and building a PowerBI
+                dashboard, leading to improvements in performance and runtime.</li>
+            </p>
+          </div>
+          <div class="resume-item">
             <h4>Data Scientist</h4>
             <h5>Jan- 2023 – June 2023</h5>
             <p><em>(Autonomous Vehicles Project) Penn State Advanced Vehicles Team</em></p>
-            <p><em>State College,PA </em></p>
+            <p><em>Remote,PA </em></p>
             <p>
             <ul>
               <li>Collaborated with a small sub-team to help build a level 4 autonomous vehicle in a project partnered with General Motors.</li>
@@ -802,7 +815,7 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="www.linkedin.com/in/abeer-mathur/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="http://www.linkedin.com/in/abeer-mathur" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -812,13 +825,6 @@
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
             <p>abeermathur7t@gmail.com</p>
-          </div>
-        </div>
-        <div class="col-md-6 mt-4 d-flex align-items-stretch">
-          <div class="info-box">
-            <i class="bx bx-phone-call"></i>
-            <h3>Call Me</h3>
-            <p></p>
           </div>
         </div>
       </div>
@@ -845,8 +851,9 @@
         </div>
         <div class="text-center"><button type="submit">Send Message</button></div>
       </form>
-
-    </div>
+      
+      </div>
+      
   </section><!-- End Contact Section -->
 
   <div class="credits">
