--- a/index.html
+++ b/index.html
@@ -105,9 +105,8 @@
             </div>
           </div>
           <p>
-            Hey! I am Abeer (pronounced "A-beer") and I am a Junior majoring in Computational Data Science at The Pennsylvania State University.In high school I decided to try out this "coding" thing and took an "Intro to Java" class; I have been hooked ever since. 
-            The pivot to data science came when I got to college and read a book called "Freakanomics" by Steven Levitt. It opened my eyes to how data can reveal stories, patters and insights about the world we assume we know a lot about.
-            In my free time I like to go hiking, skiing and bowling. When I am at home, there is nothing better than a hot cup of coffee and a good book! (Malcom Gladwell is my personal favorite). Welcome, relax, feel free to take a look around!
+            Hey! I am Abeer (pronounced "A-beer") and I am a Data Scientist The Pennsylvania State University. In high school, I decided to try out coding and instantly loved it . The pivot to Data Science came when I got to college and read a book called "Freakanomics" by Steven Levitt. It opened my eyes to how data can reveal stories, patters and insights about the world we assume we know a lot about.
+            In my free time, I like to go hiking, skiing, and bowling. When I am at home, there is nothing better than a hot cup of coffee and a good book! (Malcom Gladwell is my personal favorite). Welcome, relax, feel free to take a look around!
           </p>
         </div>
       </div>
