--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
             </div>
           </div>
           <p>
-            Hey! I am Abeer (pronounced "A-beer") and I am a Data Scientist from The Pennsylvania State University. In high school, I decided to try out coding and instantly loved it. The pivot to Data Science came when I got to college and read a book called "Freakonomics" by Steven Levitt. It opened my eyes to how data can reveal stories, patterns and insights about the world we assume we know a lot about.
-            In my free time, I like to go hiking, skiing, and bowling. When I am at home, there is nothing better than a hot cup of coffee and a good book! Malcolm Gladwell is my personal favorite. Welcome, relax, feel free to take a look around!
+            Hey! I am Abeer (pronounced "A-beer") and I am a Data Scientist from The Pennsylvania State University. In high school, I decided to try out coding and instantly loved it. The pivot to Data Science came when I got to college and read a book called "Freakonomics" by Steven Levitt. It opened my eyes to how data can reveal stories, patterns, and insights about the world.
+            In my free time, I like to go hiking, skiing, and bowling. When I am at home, there is nothing better than a hot cup of coffee and a good book! Malcolm Gladwell is my personal favorite. You can check out my resume by clicking on "My Resume". 
           </p>
         </div>
       </div>
@@ -827,7 +827,7 @@
           </div>
         </div>
       </div>
-
+<!-- 
       <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
         <div class="row">
           <div class="col-md-6 form-group">
@@ -849,7 +849,7 @@
           <div class="sent-message">Your message has been sent. Thank you!</div>
         </div>
         <div class="text-center"><button type="submit">Send Message</button></div>
-      </form>
+      </form> -->
       
       </div>
       
