--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
               <h4>Internship Project</h4>
               <p>Dashboard</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/ConstellationFinalProejct.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/Picture2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
