--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Resume pdf:</strong><a href="assets\scss\Abeer Mathur Resume 2024.pdf">My Resume</a> <span></span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Resume pdf:</strong><a href="assets\scss\Abeer_Mathur_Resume.pdf">My Resume</a> <span></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>Pennsylvania, USA</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>abeermathur7@gmail.com</span></li>
               </ul>
