--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 
       <div class="section-title">
         <h2>Resume</h2>
-        <p>Check Out <a href="assets\scss\Abeer Mathur Resume 2024.pdf">My Resume</a></p>
+        <p>Check Out <a href="assets\scss\Abeer_Mathur_Resume.pdf">My Resume</a></p>
       </div>
 
       <div class="row">
