--- a/index.html
+++ b/index.html
@@ -505,6 +505,8 @@
                 remarkable 44% reduction in database size.</li>
               <li>Analyzed inefficiencies in performance and runtime for API endpoints by writing KQL queries and building a PowerBI
                 dashboard, leading to improvements in performance and runtime.</li>
+              <li>Designed and implemented ETL pipelines in Azure Data Factory to automate data ingestion, transformation, and
+loading, resulting in the transfer of 128 entities.</li>
             </p>
           </div>
           <div class="resume-item">
