--- a/index.html
+++ b/index.html
@@ -503,8 +503,8 @@
             <ul>
               <li>Redesigned and optimized an Oracle SQL database for a customer-centric application serving 200,000 users, resulting in a
                 remarkable 44% reduction in database size.</li>
-              <li>Analyzed inefficiencies in performance and runtime for API endpoints by writing KQL queries and building a PowerBI
-                dashboard, leading to improvements in performance and runtime.</li>
+              <li>performance and run-time inefficiencies in API endpoints by developing KQL queries and building an
+end-to-end performance monitoring PowerBI dashboard, boosting application performance.</li>
               <li>Designed and implemented ETL pipelines in Azure Data Factory to automate data ingestion, transformation, and
 loading, resulting in the transfer of 128 entities.</li>
             </p>
